force-app/main/default/objects/custom_create210__c/custom_create210__c.object-meta.xml
<CustomObject>
    <label>Custom created object210</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects210</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>