force-app/main/default/objects/custom_create210__c/fields/custom_create_210field537__c.field-meta.xml
<CustomField>
    <fullName>custom_create_210field537__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 210field537</label>
    <type>Checkbox</type>
</CustomField>