force-app/main/default/objects/custom_create210__c/fields/custom_create_210field566__c.field-meta.xml
<CustomField>
    <fullName>custom_create_210field566__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 210field566</label>
    <type>Checkbox</type>
</CustomField>